<resources>
    <string name="app_name">Productivity360</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="productivity360_logo">Productivity360 Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_main"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="streaks">Streaks</string>
    <string name="rewards">Rewards</string>
    <string name="timetable">Timetable</string>
    <string name="calendar">Calendar</string>
    <string name="overview">Overview</string>
    <string name="subjects">Subjects</string>
    <string name="attendance">Attendance</string>
    <string name="level_1">Level 1</string>
    <string name="_0_points_needed_to_next_level">0 points needed to next level</string>
    <string name="burnout">BURNOUT</string>
    <string name="sign_out">Sign out</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="time">time</string>
    <string name="professor">Professor</string>
    <string name="class_name">Class Name</string>
    <string name="building">Building</string>
    <string name="class_time">Class Time</string>
    <string name="date">January 1</string>
    <string name="class_cancelled">Was this class cancelled?</string>
    <string name="no_absences">No absences yet,\nGood Job!</string>
    <string name="homework">Homework</string>
    <string name="task">Task</string>
    <string name="goal_1">Goal #1</string>
    <string name="_6900">6900</string>
    <string name="redeem">REDEEM</string>
    <string name="reward_name">Reward Name</string>
    <string name="points_needed">Points Needed</string>
    <string name="description">Description</string>
    <string name="_0">0</string>
    <string name="create_a_subject">Create a Subject</string>
    <string name="email">Email</string>
    <string name="time_drawable">time drawable</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="background_color">Background color</string>
    <string name="chosen_subject_color">chosen subject color</string>
    <string name="text_color">Text Color</string>
    <string name="chosen_text_color">chosen text color</string>
    <string name="create">Create</string>
    <string name="material_red">Material Red</string>
    <string name="material_pink">Material Pink</string>
    <string name="material_purple">Material Purple</string>
    <string name="material_deep_purple">Material Deep Purple</string>
    <string name="material_indigo">Material Indigo</string>
    <string name="material_blue">Material Blue</string>
    <string name="material_light_blue">Material Light Blue</string>
    <string name="material_cyan">Material Cyan</string>
    <string name="material_teal">Material Teal</string>
    <string name="material_green">Material Green</string>
    <string name="material_light_green">Material Light Green</string>
    <string name="material_lime">Material Lime</string>
    <string name="material_yellow">Material Yellow</string>
    <string name="material_amber">Material Amber</string>
    <string name="material_orange">Material Orange</string>
    <string name="material_deep_orange">Material Deep Orange</string>
    <string name="material_brown">Material Brown</string>
    <string name="material_grey">Material Grey</string>
    <string name="material_blue_gray">Material Blue Gray</string>
    <string name="white">White</string>
    <string name="hex">#Hex</string>
    <string name="chosen_color">chosen color</string>
    <string name="end_time_t_t_t">End Time:\t\t\t</string>
    <string name="class_name_t_t_t">Class Name:\t\t\t</string>
    <string name="building_t_t_t">Building:\t\t\t</string>
    <string name="professor_t_t_t">Professor:\t\t\t</string>
    <string name="e_mail_t_t_t">E-mail:\t\t\t</string>
    <string name="start_time_t_t_t">Start Time:\t\t\t</string>
    <string name="textview">TextView</string>
    <string name="create_a_reward">Create a Reward</string>
    <string name="address">Address</string>
    <string name="close_button">close button</string>
    <string name="subject_info">Subject Info</string>
    <string name="dialogtitle">dialogTitle</string>
</resources>
